--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+Flask-Testing = "==0.7.1"
+nose = "==1.3.7"
+pipenv = "*"
+blinker = "==1.4"
+bumpversion = "*"
 
 [packages]
-flask = "*"
-flask-assets = "*"
+Flask = "==1.1.1"
+Flask-Assets = "==0.12"
 
 [requires]
 python_version = "3.7"
