--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,22 @@ bumpversion = "*"
 [packages]
 Flask = "==1.1.1"
 Flask-Assets = "==0.12"
+Flask-Cache = "==0.13.1"
+Flask-Login = "==0.4.1"
+Flask-Sqlalchemy = "==2.4.0"
+Flask-Wtf = "==0.14.2"
+pyyaml = "==5.1.2"
+bcrypt = "==3.1.7"
+beautifulsoup4 = "==4.8.0"
+dulwich = "==0.18.2"
+gevent = "==1.4.0"
+ghdiff = "==0.4"
+gunicorn = "==19.9.0"
+itsdangerous = "*"
+markdown2 = "==2.3.8"
+simplejson = "==3.16.0"
+six = "==1.12.0"
+ldap3 = "*"
 
 [requires]
 python_version = "3.7"
