--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,8 @@ bumpversion = "*"
 [packages]
 Flask = "==1.1.1"
 Flask-Assets = "==0.12"
-Flask-Cache = "==0.13.1"
+Flask-Cache = {editable = true,git = "https://github.com/allanice001/flask-cache.git"}
+Flask-Elastic = "==0.2"
 Flask-Login = "==0.4.1"
 Flask-Sqlalchemy = "==2.4.0"
 Flask-Wtf = "==0.14.2"
@@ -29,6 +30,7 @@ markdown2 = "==2.3.8"
 simplejson = "==3.16.0"
 six = "==1.12.0"
 ldap3 = "*"
+whoosh = "==2.7.4"
 
 [requires]
 python_version = "3.7"
